Fix T55054: possible use of unsupported instructions in Cycles texture code

Differential Revision: https://developer.blender.org/D5326